# cpp-bredis

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py  conanfile.txt
bredis/: AsyncConnection.hpp  Result.hpp  SyncConnection.hpp
bredis/impl/: async_connection.hpp  common.hpp  protocol.hpp
examples/: CMakeLists.txt  multi-threads-1.cpp  speed_test_async_multi.cpp  stream-parse.cpp  synch-subscription.cpp
include/: bredis.hpp
include/bredis/: AsyncConnection.hpp  Command.hpp  Connection.hpp  Error.hpp  Extract.hpp  MarkerHelpers.hpp  Markers.hpp  Protocol.hpp  Result.hpp  Subscription.hpp  SyncConnection.hpp
include/bredis/impl/: async_connection.hpp  async_connection.ipp  async_op.ipp  common.ipp  connection.ipp  protocol.ipp  subscription.hpp  subscription.ipp  sync_connection.hpp  sync_connection.ipp
t/: 05-protocol.cpp  06-fragmented-buffer.cpp  07-extract.cpp  08-markers.cpp  10-ping.cpp  11-multi-ping.cpp  12-basic-types.cpp  13-protol-error.cpp  14-uds.cpp  15-cancellation.cpp  16-close-connection.cpp  17-sync.cpp  18-subscription.cpp  19-transaction.cpp  20-promise.cpp  21-coroutine.cpp  22-ping_drop-policy.cpp  23-stream.cpp  24-dynbuff.cpp  CMakeLists.txt  EmptyPort.hpp  SocketWithLogging.hpp  TestServer.hpp
